<resources>
    <string name="app_name">Dr.PC</string>
    <string name="but_cus_log">Costomer Login</string>
    <string name="but_admin_log">Admin Login</string>
    <string name="but_deli_log">Deliver Login</string>
    <string name="txt_cpyrht">2021 CopyRight</string>
    <string name="tet_cusLogin">Customer Login</string>
    <string name="tet_cusLog_Email">User Name :-</string>
    <string name="tet_cusLog_Pass">Password :-</string>
    <string name="cusLog_inEmail">Enter Email</string>
    <string name="but_cusLogin">Login</string>
    <string name="cusLog_reLink">Dont have an account ? sign up</string>
    <string name="txt_cusCpy">2021 CopyRight</string>
    <string name="C.reApp_name">Customer Registration</string>
    <string name="C.main_name">Register Customer</string>
    <string name="C.reName">User Name :-</string>
    <string name="C.reEmail">Email :-</string>
    <string name="C.reMobile">Mobile Number :-</string>
    <string name="C.rePass">Password :-</string>
    <string name="C.rePro">Province :-</string>
    <string name="C.reEnName">Enter Full Name</string>
    <string name="C.reEnEmail">Enter Email</string>
    <string name="C.reEnMobile">Enter Mobile Number</string>
    <string name="C.reEnPass">Enter Password</string>
    <string name="C.re_but">Sign Up</string>
    <string name="C.re_li">Already have an Account ? login</string>
    <string name="C.re_spinner">Select Province</string>
    <string-array name="select_province">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string name="C.name">Janka Bandanna</string>
    <string name="C.address">Address :-</string>
    <string name="C.email">Email :-</string>
    <string name="C.phone">Phone :-</string>
    <string name="C.dof">Date Of Birth :-</string>
    <string name="C.item">No Od Items Delivering</string>
    <string name="C.enAddress">Colombo</string>
    <string name="C.enEmail">janaka12@gmail.com</string>
    <string name="C.enPhone">0771215486</string>
    <string name="C.enDOB">1998.12.19</string>
    <string name="C.enItem">05</string>
    <string name="C.but_update">Update Acc</string>
    <string name="C.but_delete">Delete Acc</string>
    <string name="CU.but_update">Update Details</string>
    <string name="CU.app_name">Update Profile</string>
    <string name="CU.name">Full Name :-</string>
    <string name="CU.email">Email :-</string>
    <string name="CU.phone">Mobile Number :-</string>
    <string name="CU.password">Password :-</string>
    <string name="CU.province">Province :-</string>
    <string name="CD.but_update">Delete Acc</string>
    <string name="CD.app_name">Delete Profile</string>
    <string name="CD_Enname">Janaka Bandara</string>
    <string name="CD_Enemail">janaka12@gmail.com</string>
    <string name="CD_Enphone">0771215486</string>
    <string name="CD_Enaddress">Colombo</string>
    <string name="CD_name">Name :-</string>
    <string name="CD_email">Email :-</string>
    <string name="CD_phone">Phone :-</string>
    <string name="CD_address">Address :-</string>
    <string name="con_address">Address :-</string>
    <string name="con_email">Email :-</string>
    <string name="con_aphone">Mobile Number :-</string>
    <string name="con_address1">No: 78,</string>
    <string name="con_address2">Sr. jude Road,</string>
    <string name="con_address3">Idigolla,</string>
    <string name="con_address4">Gampaha.</string>
    <string name="con_email1">charama18@gmail.com</string>
    <string name="con_email2">Dr.pc78@gmail.com</string>
    <string name="con_phone1">0778542365</string>
    <string name="con_phone2">0717842364</string>
    <string name="ord_app.name">Item Order</string>
    <string name="ord_address">Address :-</string>
    <string name="ord_email">Email :-</string>
    <string name="ord_province">Province :-</string>
    <string name="ord_phone">Mobile Number :-</string>
    <string name="ord_radio">Confirm Order</string>
    <string name="ord_but">Order Items</string>
    <string name="home_cate">Category</string>
    <string name="home_com">Computer And Laptops</string>
    <string name="home_part">Computer Accessories</string>
    <string name="ho_brand">Dell</string>
    <string name="ho_brand0">hp</string>
    <string name="ho_genaration1">i7(10 Generation)</string>
    <string name="ho_genaration2">i3(10 Generation)</string>
    <string name="ho_genaration3">i5(10 Generation)</string>
    <string name="ho_price1">Rs: 250 000</string>
    <string name="ho_price2">Rs: 97 000</string>
    <string name="ho_price3">Rs: 150 000</string>
    <string name="ho_buy1">Buy Now</string>
    <string name="ho_buy2">Buy Now</string>
    <string name="ho_buy3">Buy Now</string>
    <string name="ho_part1">4GB Ram card</string>
    <string name="ho_part2">2GB NVIDIA VGA</string>
    <string name="ho_part3">1TB HDD</string>
    <string name="ho_price4">Rs: 5 000</string>
    <string name="ho_price5">Rs: 10 000</string>
    <string name="ho_price6">Rs: 12 000</string>
    <string name="ho_buy4">Buy Now</string>
    <string name="ho_buy5">Buy Now</string>
    <string name="ho_buy6">Buy Now</string>
    <string name="CL_topic">Computer And Laptops</string>
    <string name="CL_brand1">Dell</string>
    <string name="CL_brand2">Dell</string>
    <string name="CL_brand3">hp</string>
    <string name="CL_brand4">hp</string>
    <string name="CL_brand5">Asus</string>
    <string name="CL_brand6">hp</string>
    <string name="CL_gener1">i7(10 Genaration)</string>
    <string name="CL_gener2">i5(10 Genaration)</string>
    <string name="CL_gener3">i3(10 Genaration)</string>
    <string name="CL_price1">Rs: 250 000</string>
    <string name="CL_price2">Rs: 97 000</string>
    <string name="CL_price3">Rs: 150 000</string>
    <string name="CL_price4">Rs: 175 000</string>
    <string name="CL_price5">Rs: 120 000</string>
    <string name="CL_price6">Rs: 250 000</string>
    <string name="CL_buy1">Buy Now</string>
    <string name="CL_buy2">Buy Now</string>
    <string name="CL_buy3">Buy Now</string>
    <string name="CL_buy4">Buy Now</string>
    <string name="CL_buy5">Buy Now</string>
    <string name="CL_buy6">Buy Now</string>
    <string name="CA_brand1">4GB RAM</string>
    <string name="CA_brand2">2GB NVIDIA VGA</string>
    <string name="CA_brand3">1TB HDD</string>
    <string name="CA_brand4">4GB RAM</string>
    <string name="CA_brand5">1TB HDD</string>
    <string name="CA_brand6">2GB NVIDIA VGA</string>
    <string name="CA_buy1">Buy Now</string>
    <string name="CA_buy2">Buy Now</string>
    <string name="CA_buy3">Buy Now</string>
    <string name="CA_buy4">Buy Now</string>
    <string name="CA_buy5">Buy Now</string>
    <string name="CA_buy6">Buy Now</string>
    <string name="CA_price1">Rs: 10 000</string>
    <string name="CA_price2">Rs: 5 000</string>
    <string name="CA_price3">Rs: 7 000</string>
    <string name="CA_price4">Rs: 10 000</string>
    <string name="CA_price5">Rs: 8 300</string>
    <string name="CA_price6">Rs: 12 000</string>
    <string name="order_name">Order Items</string>
    <string name="order_name0">-- Order Items --</string>
    <string name="order_add">Address :-</string>
    <string name="order_pro">Province :-</string>
    <string name="order_email">Email :-</string>
    <string name="order_phone">Mobile Number :-</string>
    <string name="order_con">Confirm Order</string>
    <string name="order_but">Order Items</string>
    <string name="deliver_Appname">Dr.PC</string>
    <string name="D_Aname">Deliver Login</string>
    <string name="D_log.name">User Name :-</string>
    <string name="D_log.pass">Password :=-</string>
    <string name="D_log.Eemail">Enter Email</string>
    <string name="D_log.Epass">Enter Password</string>
    <string name="D_but">Login</string>
    <string name="D_log.link">Dont have an account ? sign up</string>
    <string name="D._log.copy">2021 CopyRight</string>
    <string name="D_re.appname">Deliver Register</string>
    <string name="D_re.name">User Name :-</string>
    <string name="D_re.email">Email :-</string>
    <string name="D_re.mobile">Mobile Number :-</string>
    <string name="D_re.pass">Password :-</string>
    <string name="D_re.pro">Province :-</string>
    <string name="D_re.but">Sign Up</string>
    <string name="D_re.link">Already have an Account ? login</string>
    <string name="D_re.Ename">Enter Name</string>
    <string name="D_re.Eemail">Enter Email</string>
    <string name="D_re.Emobile">Enter Mobile Number</string>
    <string name="D_re.Epass">Enter Password</string>
    <string name="D_pro.appname">Delete Profile</string>
    <string name="D_pro.name1">Name :-</string>
    <string name="D_pro.name2">Kasun Bandara</string>
    <string name="D_pro.did1">Deliver ID :-</string>
    <string name="D_pro.did2">1</string>
    <string name="D_pro.dcenter1">Deliver Center :-</string>
    <string name="D_pro.dcenter2">Westence Province</string>
    <string name="D_pro.phone1">Phone Number :-</string>
    <string name="D_pro.phone2">0712341670</string>
    <string name="D_pro.add1">Address :-</string>
    <string name="D_pro.add2">Colombo Road, Gampaha</string>
    <string name="D_pro.dof1">Date Of Birth :-</string>
    <string name="D_pro.dof2">10.02.1996</string>
    <string name="D_pro.email1">Email :-</string>
    <string name="D_pro.email2">kasunbandara@gmail.com</string>
    <string name="D_pro.but">Delete Profile</string>
    <string name="D_pro0.appname">Deliver Profile</string>
    <string name="D_pro0.name1">User Name :-</string>
    <string name="D_pro0.name2">Kasun Bandara</string>
    <string name="D_pro0.provi1">Province :-</string>
    <string name="D_pro0.provi2">Westence Province</string>
    <string name="D_pro0.phone1">Phone Number :-</string>
    <string name="D_pro0.phone2">0712341670</string>
    <string name="D_pro0.pass1">Password :-</string>
    <string name="D_pro0.pass2">123</string>
    <string name="D_pro0.email1">Email :-</string>
    <string name="D_pro0.email2">kasunbandara@gmail.com</string>
    <string name="D_pro0.but1">Show Deliver Items</string>
    <string name="D_pro0.but2">Update Account</string>
    <string name="D_pro0.but3">Delete Acconut</string>
    <string name="D_pro1.appname">Item Details</string>
    <string name="D_pro1.name1">Name :-</string>
    <string name="D_pro1.name2">Chathura ranathunga</string>
    <string name="D_pro1.iname1">Item Name :-</string>
    <string name="D_pro1.iname2">Dell i7</string>
    <string name="D_pro1.add1">Address :-</string>
    <string name="D_pro1.add2">25/21 Ja-ela Road, Gampaha</string>
    <string name="D_pro1.price1">Price :-</string>
    <string name="D_pro1.price">Rs:150 000</string>
    <string name="D_pro1.phone1">Phone Number :-</string>
    <string name="D_pro1.phone2">0751578369</string>
    <string name="D_pro1.Dcharge1">Deliver Charge :-</string>
    <string name="D_pro1.date1">Date :-</string>
    <string name="D_pro1.date2">15.09.2021</string>
    <string name="D_pro1.tot">Total Amount :-</string>
    <string name="D_pro1.email2">Rs: 155 000</string>
    <string name="D_pro1.but1">Calculate</string>
    <string name="D_pro1.but2">Confirm Order</string>
    <string name="D_up.appname">Update Profile</string>
    <string name="AD_title">Admin Profile</string>
    <string name="AD_but_1">Account Update</string>
    <string name="AD_but_2">Delete Update</string>
    <string name="AD_adr">Name :-</string>
    <string name="AD_email">Email Address :-</string>
    <string name="AD_num">Contact Number :-</string>
    <string name="AD_but_3">Brand New Computers</string>
    <string name="AD_but_4">Computer Accessories</string>
    <string name="cat_category">Choose Your category</string>
    <string name="cat_com">COMPUTER</string>
    <string name="cat_lap">LAPTOPS</string>
</resources>