<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cus_Login">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/appname"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/green"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:logo="@drawable/ic_baseline_computer_24"
        app:title="@string/app_name"
        app:titleMarginStart="40dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="68dp"
        android:layout_marginStart="125dp"
        android:contentDescription="@string/C.reApp_name"
        android:src="@mipmap/image_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cus_log"
        android:layout_width="216dp"
        android:layout_height="56dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="220dp"
        android:textStyle="bold"
        android:text="@string/tet_cusLogin"
        android:textColor="#000000"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/cuslog.email"
        android:layout_width="78dp"
        android:layout_height="31dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="290dp"
        android:text="@string/tet_cusLog_Email"
        android:textColor="#000000"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="315dp" />

    <TextView
        android:id="@+id/cusLog_Pass"
        android:layout_width="119dp"
        android:layout_height="34dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="390dp"
        android:text="@string/tet_cusLog_Pass"
        android:textColor="#000000"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="407dp" />

    <EditText
        android:id="@+id/cusLog_inEmail"
        android:layout_width="287dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="320dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="74dp"
        tools:layout_editor_absoluteY="345dp"
        android:autofillHints="no"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/CusLog.inPass"
        android:layout_width="288dp"
        android:layout_height="49dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="415dp"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="74dp"
        tools:layout_editor_absoluteY="441dp"
        android:autofillHints="no"
        tools:ignore="LabelFor"/>

    <TextView
        android:id="@+id/CusLog.copy"
        android:layout_width="115dp"
        android:layout_height="27dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="620dp"
        android:text="@string/txt_cusCpy"
        android:textColor="#000000"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="616dp" />

    <TextView
        android:id="@+id/CusLog_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="570dp"
        android:text="@string/cusLog_reLink"
        android:textColor="#2196F3"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="97dp"
        tools:layout_editor_absoluteY="584dp" />

    <Button
        android:id="@+id/cus_but"
        android:layout_width="176dp"
        android:layout_height="49dp"
        android:background="@color/green"
        android:textColor="@color/white"
        android:layout_marginStart="115dp"
        android:layout_marginTop="490dp"
        android:text="@string/but_cusLogin"
        android:textSize="19sp"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="509dp" />

</RelativeLayout>