<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_main_scene2"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/appname"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/green"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:logo="@drawable/ic_baseline_computer_24"
        app:title="@string/app_name"
        app:titleMarginStart="40dp" />

    <Button
        android:id="@+id/cus_log"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="356dp"
        android:background="@color/green"
        android:text="@string/but_cus_log"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/admin_log"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="436dp"
        android:background="@color/green"
        android:text="@string/but_admin_log"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/deli_log"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="520dp"
        android:background="@color/green"
        android:text="@string/but_deli_log"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_cpyrht"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="604dp"
        android:text="@string/txt_cpyrht"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="359dp"
        android:layout_height="250dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="68dp"
        android:contentDescription="@string/C.reApp_name"
        android:src="@mipmap/image_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</RelativeLayout>