<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin_Brand_New">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/appname"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/green"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:logo="@drawable/ic_baseline_computer_24"
        app:title="Brand New Computers And Leptops"
        app:titleMarginStart="40dp" />

    <TextView
        android:id="@+id/cat_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="90dp"
        android:text="@string/cat_category"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="187dp" />

    <Button
        android:id="@+id/b_com"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="320dp"
        android:text="@string/cat_com"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:backgroundTint="@color/green"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="412dp" />

    <Button
        android:id="@+id/b_lap"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="550dp"
        android:text="@string/cat_lap"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:backgroundTint="@color/green"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="636dp" />

</RelativeLayout>